fixing grid overflow on showcase grid

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ code, pre {
 
 .showcase .grid {
     overflow: visible;
-    grid-template-columns: 55% 45%;
+    grid-template-columns: 55% auto;
     gap: 30px;
 }
 
